# drf_sample

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker.env  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
sample/: schema.py  settings.py  urls.py  utils.py
sample/model/migrations/: 0001_initial.py  0002_alter_tweet_created_at.py  0002_user_phone_number_alter_tweet_created_at.py  0003_user_phone_number.py  0004_add_phone_number.py
sample/model/models/: tweet.py  user.py
sample/model/models/common/: base.py
sample/serializer/: tweet_serializer.py  user.py  user_serializer.py
sample/view/views/: __init__.py  tweet.py  tweet_view.py  user.py  user_view.py
